# Medical_Chatbot

./: .gitignore  README.md  app.py  demo.py  main.py  pyproject.toml  requirements.txt  setup.py  template.sh
chatbot/config/: config.yaml
chatbot/exception/: __init__.py
chatbot/pipeline/: rag_pipeline.py
chatbot/prompts/: prompt.py
chatbot/src/: chat_ingestor.py  generate.py  retriever.py
chatbot/utils/: api_key_loader.py  config_loader.py  docs_ops.py  model_loader.py
draw/: .excalidraw
notebooks/: L1.ipynb
src/medical_chatbot/core/: exception_config.py  logger_config.py
templates/: index.html
